--- a/favorates.html
+++ b/favorates.html
@@ -23,8 +23,7 @@
 			<a href="index.html">Homepage</a>
 			<a href="Catalog.html">Catalog</a>
             <a href="favorates.html">Favorites</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i></a>
+			<a id = "dropDownMenu" class="icon">Menu <i class="fa fa-bars"></i></a>
 		</div>
 
 	</header>
