--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+	<section>
 	<a id="skiptohome"></a>
 	<a href="#maincontent">Skip to main content</a>
 	<a href="index.html"><img id="logo" src="/res/LibernalLibaratorsLogoS.png" alt="Homepage logo"></a>
-
+	</section>
 
 	<header>
 
@@ -23,11 +24,11 @@
 			<a href="favorates.html">Favorites</a>
 			<a id="dropDownMenu" class="icon">Menu <i class="fa fa-bars"></i></a>
 		</div>
-
+	<h1 aria-label="CurrentPage">Homepage</h1>
 	</header>
 
 	<section>
-	<h1 aria-label="CurrentPage">Homepage</h1>
+	
 
 	<div class="container" role="region" aria-label="welcomeMessage">
 		<img src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" id="WelcomeImg" alt="Image of libray">
